--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,14 +56,82 @@ jobs:
           MD5SUM=$(md5sum target/lambda/lambda/bootstrap.zip | awk '{print $1}')
           echo "md5sum=$MD5SUM" >> $GITHUB_OUTPUT
 
+  generateMatrix:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - id: set-matrix
+        run: |
+          # Convert CSV regions to JSON array
+          regions="${{ vars.DEPLOY_REGIONS }}"
+          json_array="["
+          IFS=',' read -ra REGIONS <<< "$regions"
+          for i in "${!REGIONS[@]}"; do
+            if [ $i -gt 0 ]; then json_array+=","; fi
+            json_array+="\"${REGIONS[i]}\""
+          done
+          json_array+="]"
+          echo "matrix={\"region\":$json_array}" >> $GITHUB_OUTPUT
+
+
+  bootstrap-infra:
+    runs-on: ubuntu-latest
+    needs: [generateMatrix]
+    strategy:
+      matrix:  ${{ fromJson(needs.generateMatrix.outputs.matrix) }}
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.ARCHODEX_BACKEND_AWS_ROLE_ARN }}
+          aws-region: ${{ matrix.region }}
+          role-chaining: env.ACT == 'true'
+
+      - name: Install AWS CLI v2
+        run: |-
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-$(uname -m).zip" -o /tmp/awscliv2.zip
+          unzip -q /tmp/awscliv2.zip -d /tmp
+          rm /tmp/awscliv2.zip
+          /tmp/aws/install --update
+          rm -rf /tmp/aws/
+          aws --version
+
+      - name: Create deployment assets bucket and generate outputs
+        id: create-bucket
+        run: |-
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          # BUCKET_NAME="archodex-assets-${{ vars.ARCHODEX_ENV_NAME }}-${ACCOUNT_ID}"
+          BUCKET_NAME="cloudformation-deployment-assets-${ACCOUNT_ID}-${{ matrix.region }}"
+          TIMESTAMP=$(date +%Y%m%d-%H%M%S)
+          S3_PATH_PREFIX="/bootstrap/${TIMESTAMP}"
+
+          echo "Checking if bucket ${BUCKET_NAME} exists..."
+          if aws s3 ls "s3://${BUCKET_NAME}" > /dev/null 2>&1; then
+            echo "Bucket ${BUCKET_NAME} already exists"
+
+            # Verify bucket ownership using expected-bucket-owner
+            echo "Verifying bucket ownership..."
+            if aws s3api get-bucket-location --bucket "${BUCKET_NAME}" --expected-bucket-owner "${ACCOUNT_ID}" > /dev/null 2>&1; then
+              echo "✅ Bucket ownership verified - bucket is owned by account ${ACCOUNT_ID}"
+            else
+              echo "❌ ERROR: Bucket ${BUCKET_NAME} exists but is not owned by account ${ACCOUNT_ID}"
+              echo "🚨🚨🚨 Bucket Collision Detected! 🚨🚨🚨"
+              exit 1
+            fi
+          else
+            echo "Creating bucket ${BUCKET_NAME} in ${{ matrix.region }}..."
+            aws s3 mb "s3://${BUCKET_NAME}" --region ${{ matrix.region }}
+
+            echo "Bucket ${BUCKET_NAME} created successfully"
+            echo "DEBUG - NOOP"
+          fi
+
   upload:
-    needs: build
+    needs: [build, generateMatrix, bootstrap-infra]
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        region:
-          - us-west-2
-          - us-east-1
+      matrix:  ${{ fromJson(needs.generateMatrix.outputs.matrix) }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -98,7 +166,7 @@ jobs:
             "s3://cloudformation-deployment-assets-${ACCOUNT_ID}-us-west-2/backend/template.yaml"
 
   deploy:
-    needs: [build, upload]
+    needs: [upload]
     runs-on: ubuntu-latest
     steps:
       - name: Configure AWS credentials
@@ -152,15 +220,15 @@ jobs:
           while true; do
             # Get current stack status
             STACK_STATUS=$(aws cloudformation describe-stacks --stack-name archodex-backend --query 'Stacks[0].StackStatus' --output text 2>/dev/null || echo "STACK_NOT_FOUND")
-            
+
             echo "Current stack status: $STACK_STATUS"
-            
+
             # Show recent events
             aws cloudformation describe-stack-events \
               --stack-name archodex-backend \
               --query "StackEvents[?Timestamp>=\`${LAST_EVENT_TIME}\`].{Time:Timestamp,Resource:LogicalResourceId,Type:ResourceType,Status:ResourceStatus,Reason:ResourceStatusReason}" \
               --output table 2>/dev/null || true
-            
+
             # Check if deployment is complete
             case $STACK_STATUS in
               CREATE_COMPLETE|UPDATE_COMPLETE)
@@ -187,7 +255,7 @@ jobs:
                 echo "Unknown stack status: $STACK_STATUS"
                 ;;
             esac
-            
+
             # Update last event time and wait
             LAST_EVENT_TIME=$(date -u '+%Y-%m-%dT%H:%M:%S')
             sleep 5
