--- a/lambda/Cargo.toml
+++ b/lambda/Cargo.toml
@@ -12,3 +12,6 @@ futures-lite = { version = "2.3.0", default-features = false, features = ["std"]
 lambda_http = { version = "0.11.1", default-features = false, features = ["apigw_rest", "tracing"] }
 tokio.workspace = true
 tracing-subscriber.workspace = true
+
+[features]
+archodex-com = ["archodex-backend/archodex-com"]
