--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,123 +1,88 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"type": "cargo",
-			"command": "build",
-			"problemMatcher": [
-				"$rustc"
-			],
-			"group": "build",
-			"label": "rust: cargo build"
-		},
-		{
-			"type": "cargo",
-			"command": "lambda",
-			"args": [
-				"build",
-				"--release",
-				"--arm64",
-				"--package",
-				"lambda",
-				"--output-format",
-				"zip"
-			],
-			"env": {
-				"PATH": "${env:PATH}:${env:HOME}/zig",
-			},
-			"problemMatcher": [
-				"$rustc"
-			],
-			"group": {
-				"kind": "build",
-				"isDefault": true,
-			},
-			"label": "rust: cargo lambda build"
-		},
-		{
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "type": "cargo",
+      "command": "build",
+      "problemMatcher": ["$rustc"],
+      "group": "build",
+      "label": "rust: cargo build"
+    },
+    {
+      "type": "cargo",
+      "command": "lambda",
+      "args": [
+        "build",
+        "--release",
+        "--arm64",
+        "--package",
+        "lambda",
+        "--output-format",
+        "zip"
+      ],
+      "env": {
+        "PATH": "${env:PATH}:${env:HOME}/zig"
+      },
+      "problemMatcher": ["$rustc"],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "label": "rust: cargo lambda build"
+    },
+    {
       "label": "Start archodex-backend-dev pod in Kubernetes cluster",
       "type": "shell",
       "command": "kubectl apply -f .devcontainer/k8s",
       "problemMatcher": []
     },
-		{
-			"type": "shell",
-			"command": "GITHUB_TOKEN=$(gh auth token) && act --platform ubuntu-latest-arm64=catthehacker/ubuntu:act-latest --platform ubuntu-latest=catthehacker/ubuntu:act-latest --container-architecture linux/arm64 --bind --var DEPLOY_REGIONS=${config:archodex.DEV_REGIONS} --var ARCHODEX_ENV_NAME=${config:archodex.ARCHODEX_ENV_NAME} --env-file <(aws configure export-credentials --format env --profile=archodex-dev-AdministratorAccess)  --secret ARCHODEX_BACKEND_AWS_ROLE_ARN='${config:archodex.ARCHODEX_BACKEND_AWS_ROLE_ARN}' --job deploy",
-			"options": {
-				"shell": {
-					"executable": "/bin/bash",
-					"args": ["-c"]
-				}
-			},
-			"problemMatcher": [],
-			"group": {
-				"kind": "build",
-			},
-			"label": "act: Run GitHub Actions Workflow deploy.yml locally for dev"
-		},
-		{
-			"type": "shell",
-			"command": "act",
-			"args": [
-				"workflow_dispatch",
-				"--var",
-				"ARCHODEX_SOURCE_DIR=${workspaceFolder}",
-				"--platform",
-				"ubuntu-latest=-self-hosted",
-				"--container-architecture",
-				"linux/arm64",
-				"--env",
-				"AWS_PROFILE=archodex-prod-AdministratorAccess",
-				"--env",
-				"ARCHODEX_SOURCE_DIR=${workspaceFolder}",
-				"--var",
-				"DEPLOY_REGIONS=${input:PROD_REGIONS}",
-				"--job",
-				"deploy"
-			],
-			"options": {
-				"env": {
-					"PATH": "${env:PATH}:${env:HOME}/bin:${env:HOME}/zig",
-				},
-			},
-			"problemMatcher": [],
-			"group": {
-				"kind": "build",
-			},
-			"label": "act: Run GitHub Actions Workflow deploy.yml locally for prod"
-		},
-		{
-			"type": "shell",
-			"command": "act",
-			"args": [
-				"workflow_dispatch",
-				"--env-file",
-				"<(aws configure export-credentials --format env --profile=archodex-dev-AdministratorAccess)",
-				"--var",
-				"ARCHODEX_SOURCE_DIR=${workspaceFolder}",
-				"--platform",
-				"ubuntu-latest=-self-hosted",
-				"--container-architecture",
-				"linux/amd64",
-				"--var",
-				"DEPLOY_REGIONS=${input:DEV_REGIONS}",
-				"--job",
-				"bootstrap"
-			],
-			"options": {
-				"shell": {
-					"executable": "/bin/bash",
-					"args": ["-c"]
-				},
-				"env": {
-					"PATH": "${env:PATH}:${env:HOME}/bin:${env:HOME}/zig",
-				},
-			},
-			"problemMatcher": [],
-			"group": {
-				"kind": "build",
-			},
-			"label": "act: Run bootstrap job with exported AWS credentials"
-		}
-	]
+    {
+      "type": "shell",
+      "command": "GITHUB_TOKEN=$(gh auth token) && act --platform ubuntu-latest-arm64=catthehacker/ubuntu:act-latest --platform ubuntu-latest=catthehacker/ubuntu:act-latest --container-architecture linux/arm64 --bind --var DEPLOY_REGIONS=${config:archodex.DEV_REGIONS} --var ARCHODEX_ENV_NAME=${config:archodex.ARCHODEX_ENV_NAME} --env-file <(aws configure export-credentials --format env --profile=archodex-dev-AdministratorAccess)  --secret ARCHODEX_BACKEND_AWS_ROLE_ARN='${config:archodex.ARCHODEX_BACKEND_AWS_ROLE_ARN}' --job deploy",
+      "options": {
+        "shell": {
+          "executable": "/bin/bash",
+          "args": ["-c"]
+        }
+      },
+      "problemMatcher": [],
+      "group": {
+        "kind": "build"
+      },
+      "label": "act: Run GitHub Actions Workflow deploy.yml locally for dev"
+    },
+    {
+      "type": "shell",
+      "command": "act",
+      "args": [
+        "workflow_dispatch",
+        "--env-file",
+        "<(aws configure export-credentials --format env --profile=archodex-dev-AdministratorAccess)",
+        "--var",
+        "ARCHODEX_SOURCE_DIR=${workspaceFolder}",
+        "--platform",
+        "ubuntu-latest=-self-hosted",
+        "--container-architecture",
+        "linux/amd64",
+        "--var",
+        "DEPLOY_REGIONS=${input:DEV_REGIONS}",
+        "--job",
+        "bootstrap"
+      ],
+      "options": {
+        "shell": {
+          "executable": "/bin/bash",
+          "args": ["-c"]
+        },
+        "env": {
+          "PATH": "${env:PATH}:${env:HOME}/bin:${env:HOME}/zig"
+        }
+      },
+      "problemMatcher": [],
+      "group": {
+        "kind": "build"
+      },
+      "label": "act: Run bootstrap job with exported AWS credentials"
+    }
+  ]
 }
