fix: Fix job name

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -67,7 +67,7 @@
         "--var",
         "DEPLOY_REGIONS=${input:DEV_REGIONS}",
         "--job",
-        "bootstrap"
+        "bootstrap-infra"
       ],
       "options": {
         "shell": {
