feat: Ensure domain A record exists before deploy
Remove resource that injects a placeholder Domain A record to allow congnito domain verification to pass - instead that should be done by archodex-www.

--- a/template.yaml
+++ b/template.yaml
@@ -1431,9 +1431,7 @@ Resources:
       ParameterName: !Sub /${AWS::StackName}/cognito_domain_certificate
 
   CognitoUserPoolDomain:
-    DependsOn:
-      - CrossRegionArchodexEnvironmentStacks
-      - CognitoDomainVerificationRecord
+    DependsOn: CrossRegionArchodexEnvironmentStacks
     Type: AWS::Cognito::UserPoolDomain
     Properties:
       CustomDomainConfig:
@@ -1441,16 +1439,6 @@ Resources:
       Domain: auth.{{resolve:ssm:/account_subdomain/domain}}
       ManagedLoginVersion: 2
       UserPoolId: !Ref CognitoUserPool
-
-  CognitoDomainVerificationRecord:
-    Type: AWS::Route53::RecordSet
-    Properties:
-      HostedZoneId: "{{resolve:ssm:/account_subdomain/hosted_zone_id}}"
-      Name: "{{resolve:ssm:/account_subdomain/domain}}"
-      Type: A
-      TTL: 300
-      ResourceRecords:
-        - "192.0.2.1" # Documentation IP from RFC 5737
 
   CognitoUserPoolDomainDNSRecord:
     Type: AWS::Route53::RecordSet
