--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,85 @@ env:
   AWS_PAGER: ""
 
 jobs:
+  check-prerequisites:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.ARCHODEX_BACKEND_AWS_ROLE_ARN }}
+          aws-region: us-west-2
+          mask-aws-account-id: true
+          role-chaining: env.ACT == 'true'
+
+      - name: Install AWS CLI v2
+        run: |-
+          echo "Installing AWS CLI v2"
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-$(uname -m).zip" -o /tmp/awscliv2.zip
+          unzip -q /tmp/awscliv2.zip -d /tmp
+          rm /tmp/awscliv2.zip
+          /tmp/aws/install --update
+          rm -rf /tmp/aws/
+          aws --version
+
+      - name: Check for domain A record
+        run: |
+          echo "Checking prerequisites for Cognito custom domain..."
+
+          # Get the domain from SSM parameters
+          PARAMS=$(aws ssm get-parameters --names /account_subdomain/domain /account_subdomain/hosted_zone_id --query 'Parameters[*].[Name,Value]' --output text)
+          DOMAIN=$(echo "$PARAMS" | grep "/account_subdomain/domain" | awk '{print $2}')
+          HOSTED_ZONE_ID=$(echo "$PARAMS" | grep "/account_subdomain/hosted_zone_id" | awk '{print $2}')
+
+          echo "Domain: $DOMAIN"
+          echo "Hosted Zone ID: $HOSTED_ZONE_ID"
+
+          # Check if A record exists for the root domain
+          echo "Checking for A record on $DOMAIN..."
+
+          A_RECORD_EXISTS=$(aws route53 list-resource-record-sets \
+            --hosted-zone-id "$HOSTED_ZONE_ID" \
+            --query "ResourceRecordSets[?Name=='${DOMAIN}.' && Type=='A'] | length(@)" \
+            --output text)
+
+          if [ "$A_RECORD_EXISTS" -eq "0" ]; then
+            echo "❌ ERROR: No A record found for $DOMAIN"
+            echo ""
+            echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            echo "⚠️  PREREQUISITE NOT MET: Root domain A record is missing"
+            echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            echo ""
+            echo "AWS Cognito requires an A record for the root domain ($DOMAIN) to verify"
+            echo "domain ownership when setting up custom domains."
+            echo ""
+            echo "👉 ACTION REQUIRED: Deploy the archodex-www stack first"
+            echo ""
+            echo "The archodex-www stack creates the necessary root domain A record that points"
+            echo "to the CloudFront distribution. This satisfies Cognito's verification requirement."
+            echo ""
+            echo "Steps to resolve:"
+            echo "1. Deploy the archodex-www stack to this environment"
+            echo "2. Wait for DNS propagation (usually immediate, but can take up to 60 minutes)"
+            echo "3. Re-run this deployment workflow"
+            echo ""
+            echo "For more information, see:"
+            echo "https://docs.aws.amazon.com/cognito/latest/developerguide/cognito-user-pools-add-custom-domain.html"
+            echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+            exit 1
+          else
+            echo "✅ A record found for $DOMAIN"
+            echo ""
+            # Get details about the A record
+            aws route53 list-resource-record-sets \
+              --hosted-zone-id "$HOSTED_ZONE_ID" \
+              --query "ResourceRecordSets[?Name=='${DOMAIN}.' && Type=='A']" \
+              --output table
+            echo ""
+            echo "Prerequisites check passed. Continuing with deployment..."
+          fi
+
   build:
+    needs: [check-prerequisites]
     runs-on: ubuntu-latest-arm64
     outputs:
       api-bootstrap-md5sum: ${{ steps.calculate-md5.outputs.md5sum }}
@@ -74,12 +152,11 @@ jobs:
           json_array+="]"
           echo "matrix={\"region\":$json_array}" >> $GITHUB_OUTPUT
 
-
   bootstrap-infra:
     runs-on: ubuntu-latest
-    needs: [generateMatrix]
+    needs: [check-prerequisites, generateMatrix]
     strategy:
-      matrix:  ${{ fromJson(needs.generateMatrix.outputs.matrix) }}
+      matrix: ${{ fromJson(needs.generateMatrix.outputs.matrix) }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -101,7 +178,6 @@ jobs:
         id: create-bucket
         run: |-
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          # BUCKET_NAME="archodex-assets-${{ vars.ARCHODEX_ENV_NAME }}-${ACCOUNT_ID}"
           BUCKET_NAME="cloudformation-deployment-assets-${ACCOUNT_ID}-${{ matrix.region }}"
           TIMESTAMP=$(date +%Y%m%d-%H%M%S)
           S3_PATH_PREFIX="/bootstrap/${TIMESTAMP}"
@@ -131,7 +207,7 @@ jobs:
     needs: [build, generateMatrix, bootstrap-infra]
     runs-on: ubuntu-latest
     strategy:
-      matrix:  ${{ fromJson(needs.generateMatrix.outputs.matrix) }}
+      matrix: ${{ fromJson(needs.generateMatrix.outputs.matrix) }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
