Update deploy workflow build step for refactor

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -125,7 +125,14 @@ jobs:
 
       - name: Build with Cargo Lambda
         run: |-
-          cargo lambda build --config net.git-fetch-with-cli=true --release --arm64 --package lambda --output-format zip
+          cargo lambda build \
+            --config net.git-fetch-with-cli=true \
+            --config patch.crates-io.surrealdb.git='https://github.com/Archodex/surrealdb.git' \
+            --features archodex-com \
+            --release \
+            --arm64 \
+            --package lambda \
+            --output-format zip
 
       - name: Calculate MD5 sum
         id: calculate-md5
