--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,28 @@
-// This is based off the upstream Rust devcontainer spec (See
-// https://github.com/devcontainers/images/blob/main/src/rust/.devcontainer/devcontainer.json).
-// Unfortunately, the pre-built image isn't rebuilt frequently enough to stay on
-// the latest Rust version.
 {
 	"name": "archodex-backend-dev",
 	"image": "rust:latest",
-	"postCreateCommand": ".devcontainer/init.sh",
-	"postStartCommand": ".devcontainer/init.sh",
-  "postAttachCommand": ".devcontainer/init.sh"
+	"features": {
+		"ghcr.io/devcontainers/features/common-utils:2": {
+			"installZsh": "true",
+			"username": "vscode",
+			"upgradePackages": "true"
+		},
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {
+			// Moby isn't supported on Debian Trixie, the base image for `rust:latest`
+			"moby": false
+		}
+	},
+	"remoteUser": "vscode",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"vadimcn.vscode-lldb",
+				"github.vscode-github-actions",
+				"ms-vscode.cpptools",
+				"rust-lang.rust-analyzer",
+				"xaver.clang-format"
+			]
+		}
+	},
+	"postCreateCommand": ".devcontainer/init.sh"
 }
