--- a/migrator/Cargo.toml
+++ b/migrator/Cargo.toml
@@ -11,3 +11,6 @@ surrealdb.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+
+[features]
+archodex-com = []
